kubernetes/tools/immich-forward/base/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-forward
spec:
  ports:
    - port: 2283
      targetPort: 2283
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: immich-forward
subsets:
  - addresses:
      - ip: 192.168.0.5
    ports:
      - port: 2283
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-forward
  annotations:
    external-dns.alpha.kubernetes.io/target: vps.wagner.gg
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
spec:
  ingressClassName: nginx-public
  rules:
    - host: immich.wagner.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-forward
                port:
                  number: 2283
